<package format="2">
  <name>site</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for site</p>
    <p>This package contains configuration data, 3D models and launch files
for site robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="gzzyyxy@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <export>
    <architecture_independent />
  </export>
</package>